Add bold to artist name

--- a/app/templates/artist_delete.html
+++ b/app/templates/artist_delete.html
@@ -20,7 +20,7 @@
 	<form action="" id="" method="post">
 
 		<div class="[ row justify-content-center py-4 ]">
-			<p>Are you sure you want to delete {{ artist.full_name }} from the database?</p>
+			<p>Are you sure you want to delete <b>{{ artist.full_name }}</b> from the database?</p>
 		</div>
 
 		<section id="section--submit">
