--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -10,8 +10,8 @@
 	<section id="section--head">
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
-			<div class="col-sm-12 col-md-8">
-				<h1 class="text-center display-3"><b>{{ artist.full_name|upper }}</b></h1>
+			<div class="[ col-sm-12 col-md-8 ]">
+				<h1 class="[ text-center display-3 ]"><b>{{ artist.full_name|upper }}</b></h1>
 			</div>
 		</div>
 	</section>
@@ -19,7 +19,7 @@
 	<form action="/artists/{{ artist.id }}/edit" id="formArtist" method="post">
 		{{ form.csrf_token }}
 
-		<div class="row justify-content-center">
+		<div class="[ row justify-content-center ]">
 			<div class="[ col-sm-12 col-md-10 text-right p-4 ]">
 				<button type="button" class="btn__parks btn__parks--edit" id="form_edit">Edit</button>
 				<a href="{{ url_for('artist_delete', artist_id=artist.id) }}" role="button" class="btn__parks btn__parks--no [ btn btn-sm ]">Delete</a>
@@ -27,64 +27,63 @@
 		</div>
 
 		<section id="section--bio">
-			<div class="row justify-content-center py-4">
-				<div class="col-sm-12 col-md-8 col-lg-6">
-					<h2 class="text-center display-4 p-4">Bio</h2>
+			<div class="[ row justify-content-center py-4 ]">
+				<div class="[ col-sm-12 col-md-8 col-lg-6 ]">
+					<h2 class="[ display-4 p-4 ]">Bio</h2>
 
 					<ul>
-						<li>ID: {{ artist.id }}</li>
 
-						<li class="row mb-3 d-none">
-							<div class="col-md-4">
+						<li class="[ row mb-3 d-none ]">
+							<div class="[ col-md-4 ]">
 								<!-- <label for="fName">First Name</label> -->
 								{{ form.fName.label }}
 							</div>
-							<div class="col-md-6">
+							<div class="[ col-md-6 ]">
 								{{ form.fName(class="form-control-plaintext", value=artist.fName) }}
 								<!-- <input type="text" name="fName" value="{{ artist.fName }}" class="form-control-plaintext"> -->
 							</div>
 						</li>
 
-						<li class="row mb-3 d-none">
-							<div class="col-md-4">
+						<li class="[ row mb-3 d-none ]">
+							<div class="[ col-md-4 ]">
 								<!-- <label for="pName">Last Name (Primary)</label> -->
 								{{ form.pName.label }}
 							</div>
-							<div class="col-md-6">
+							<div class="[ col-md-6 ]">
 								{{ form.pName(class="form-control-plaintext", value=artist.pName) }}
 								<!-- <input type="text" name="pName" value="{{ artist.pName }}" class="form-control-plaintext"> -->
 							</div>
 						</li>
 
-						<li class="row mb-3">
-							<div class="col-md-4">
+						<li class="[ row mb-3 ]">
+							<div class="[ col-md-4 ]">
 								<!-- <label for="email">Email</label> -->
 								{{ form.email.label }}
 							</div>
-							<div class="col-md-6">
+							<div class="[ col-md-6 ]">
 								{{ form.email(class="form-control-plaintext", value=artist.email, readonly=true) }}
 								<!-- <input type="text" name="email" value="{{ artist.email }}" class="form-control-plaintext" readonly> -->
 							</div>
 						</li>
 
-						<li class="row mb-3">
-							<div class="col-md-4">
+						<li class="[ row mb-3 ]">
+							<div class="[ col-md-4 ]">
 								<!-- <label for="phone">Phone</label> -->
 								{{ form.phone.label }}
 							</div>
-							<div class="col-md-6">
+							<div class="[ col-md-6 ]">
 								{{ form.phone(class="form-control-plaintext", value=artist.phone, readonly=true) }}
 								<!-- <input type="text" name="phone" value="{{ artist.phone }}" class="form-control-plaintext" readonly> -->
 							</div>
 						</li>
 
-						<li class="row mb-3">
-							<div class="col-md-4">
+						<li class="[ row mb-3 ]">
+							<div class="[ col-md-4 ]">
 								<!-- <label for="website">Website</label> -->
 								{{ form.website.label }}
 							</div>
-							<div class="col-md-6">
-								<a href="http://{{ artist.website }}" class="d-inline">{{ artist.website }}</a>
+							<div class="[ col-md-6 ]">
+								<a href="http://{{ artist.website }}" class="[ d-inline ]">{{ artist.website }}</a>
 								{{ form.website(class="form-control-plaintext d-none", value=artist.website) }}
 								<!-- <input type="text" name="website" value="{{ artist.website }}" class="form-control-plaintext d-none"> -->
 							</div>
@@ -96,15 +95,15 @@
 		</section>
 
 		<section id="section--artworks">
-			<div class="row justify-content-center py-4">
-				<div class="col-sm-12 col-md-8 col-lg-6">
-					<h2 class="text-center display-4 p-4">Artworks</h2>
+			<div class="[ row justify-content-center py-4 ]">
+				<div class="[ col-sm-12 col-md-8 col-lg-6 ]">
+					<h2 class="[ display-4 p-4 ]">Artworks</h2>
 
 					{% if artist.artworks %}
 
-						<div class="row justify-content-center">
-							<div class="col-12 text-right p-4">
-								<button type="button" class="form_add btn__parks btn__parks--add  [ d-none ml-2 ]" id="add_artist">Add</button>
+						<div class="[ row justify-content-center ]">
+							<div class="[ col-12 text-right p-4 ]">
+								<button type="button" class="form_add btn__parks btn__parks--add [ d-none ml-2 ]" id="add_artist">Add</button>
 							</div>
 						</div>
 
@@ -112,14 +111,14 @@
 
 							{% for x in artist.artworks %}
 
-								<li class="row mb-3 align-items-center artist__li--artworks">
-									<div class="col-md-4">
+								<li class="artist__li--artworks [ row mb-3 align-items-center ]">
+									<div class="[ col-md-4 ]">
 										<label for="art_name">Artwork</label>
 									</div>
-									<div class="col-md-6">
-										<a href="{{ url_for('artwork', artwork_id=x.id) }}" class="d-inline">{{ x.name }}</a>
-										{{ form.artworks(class="datalist_art form-control-plaintext d-none", id="datalist_art", list="artworks", data_value=x.id, value=x.name, readonly=true) }}
-										<!-- <input id="datalist_art" type="text" name="artworks" list="artworks" data-value="{{ x.id }}" value="{{ x.name }}" class="datalist_art form-control-plaintext d-none" readonly> -->
+									<div class="[ col-md-6 ]">
+										<a href="{{ url_for('artwork', artwork_id=x.id) }}" class="[ d-inline ]">{{ x.name }}</a>
+										<!-- {{ form.artworks(class="datalist_art form-control-plaintext d-none", id="datalist_art", list="artworks", data_value=x.id, value=x.name, readonly=true) }} -->
+										<input id="datalist_art" type="text" name="artworks" list="artworks" data-value="{{ x.id }}" value="{{ x.name }}" class="datalist_art [ form-control-plaintext d-none ]" readonly>
 										<!-- Call datalist macro function -->
 										{{ datalist("artworks", artworks) }}
 									</div>
