--- a/app/templates/artwork.html
+++ b/app/templates/artwork.html
@@ -1,5 +1,4 @@
 {% extends "layout.html" %}
-{% from "_macros.html" import nav %}
 {% block title %}NYC Parks Database – Artists{% endblock %}
 {% block content %}
 
@@ -22,7 +21,7 @@
 							<ul>
 								{% if artwork.artists %}
 								{% for artist in artwork.artists %}
-									<li><a href="{{ url_for('artist', artist_id=artist.id) }}">{{ artist.full_name }}</a></li>
+									<li><a href="{{ url_for('artist', artist_id=artist.id) }}">{{ artist.name }}</a></li>
 								{% endfor %}
 								{% else %}
 								<li><i>This artwork doesn't have any artists yet.</i></li>
